Split CSS to different files using Sass partials to reduce duplication. Fixed minor layout bugs

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link href="css/all.min.css" rel="stylesheet">
-  <link href="css/main.css" rel="stylesheet">
+  <link href="css/main-index.css" rel="stylesheet">
   <script src="js/main.js" defer></script>
 
   <title>Frontend Mentor | Rest Countries API with Color Theme Switcher</title>
