--- a/detail.html
+++ b/detail.html
@@ -6,8 +6,10 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link href="css/all.min.css" rel="stylesheet">
-  <link href="css/main-index.css" rel="stylesheet">
-  <script src="js/main.js" defer></script>
+  <link href="css/main-detail.css" rel="stylesheet">
+
+  <script src="js/main-theme.js" defer></script>
+  <script src="js/main-detail.js" defer></script>
 
   <title>Frontend Mentor | Rest Countries API with Color Theme Switcher</title>
 
