--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link href="css/all.min.css" rel="stylesheet">
   <link href="css/main-index.css" rel="stylesheet">
-  <script src="js/main.js" defer></script>
+
+  <script src="js/main-theme.js" defer></script>
+  <script src="js/main-index.js" defer></script>
 
   <title>Frontend Mentor | Rest Countries API with Color Theme Switcher</title>
 
@@ -28,7 +30,7 @@
       <div class="header__theme">
         <!-- <i class="far fa-moon theme-switch__icon"></i>
         <i class="fas fa-sun theme-switch__icon"></i> -->
-        <button id="themeSwitch" class="theme-switch" role="button" aria-pressed="false">
+        <button id="themeSwitch" class="theme-switch" title="Switch to Dark Mode" aria-pressed="false">
           Dark Mode
         </button>
       </div>
